--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ hs_err_pid*
 .idea/libraries/org_thymeleaf_thymeleaf_spring4_Release.xml
 .idea/libraries/org_thymeleaf_thymeleaf_Release.xml
 /.idea
+.idea
